--- a/src/miniprogram/app.json
+++ b/src/miniprogram/app.json
@@ -7,8 +7,7 @@
     "pages/addFunction/addFunction",
     "pages/deployFunctions/deployFunctions",
     "pages/chooseLib/chooseLib",
-    "pages/openapi/openapi",
-    "pages/ui"
+    "pages/openapi/openapi"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
