--- a/src/miniprogram/app.json
+++ b/src/miniprogram/app.json
@@ -8,7 +8,7 @@
     "pages/deployFunctions/deployFunctions",
     "pages/chooseLib/chooseLib",
     "pages/openapi/openapi",
-    "pages/ui"
+    "pages/calendar/calendar"
   ],
   "window": {
     "backgroundColor": "#F6F6F6",
@@ -16,6 +16,22 @@
     "navigationBarBackgroundColor": "#F6F6F6",
     "navigationBarTitleText": "云开发 QuickStart",
     "navigationBarTextStyle": "black"
+  },
+  "tabBar":{
+    "list":[
+      {
+        "pagePath":"pages/index/index",
+        "text":"清单",
+        "iconPath":"images/checklist.png",
+        "selectedIconPath":"images/checklist.png"
+      },
+      {
+        "pagePath": "pages/calendar/calendar",
+        "text": "行事历",
+        "iconPath": "images/calendar.png",
+        "selectedIconPath": "images/calendar.png"
+      }
+    ]
   },
   "sitemapLocation": "sitemap.json"
 }
