项目重命名

--- a/src/Calendar Interface/project.config.json
+++ b/src/Calendar Interface/project.config.json
@@ -13,8 +13,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.7.2",
-	"appid": "wx78304e506d6e55a4",
-	"projectname": "miniprogram-test-1",
+	"appid": "wx631d2bc7dbbf36c8",
+	"projectname": "Calendar%20Interface",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
