--- a/src/miniprogram/app.json
+++ b/src/miniprogram/app.json
@@ -13,7 +13,7 @@
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#E6E6FA",
+    "navigationBarBackgroundColor": "#617fdf",
     "navigationBarTitleText": "任务管理清单",
     "navigationBarTextStyle": "black"
   },
